cmake_minimum_required (VERSION 3.10)

get_filename_component (PNAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
if (PARENT_PROJECT_NAME)
    set (PNAME "${PARENT_PROJECT_NAME}_${PNAME}")
endif ()
project (${PNAME})
set (PARENT_PROJECT_NAME ${PROJECT_NAME})

file (GLOB DIRS "*")
foreach (DIR ${DIRS})
    if (IS_DIRECTORY ${DIR})
        get_filename_component (DIR_NAME ${DIR} NAME)
        if (EXISTS "${DIR}/CMakeLists.txt")
            add_subdirectory (${DIR_NAME})
        endif ()
    endif ()
endforeach ()
