cmake_minimum_required (VERSION 3.10)

get_filename_component (PNAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
if (PARENT_PROJECT_NAME)
    set (PNAME "${PARENT_PROJECT_NAME}_${PNAME}")
endif ()
project (${PNAME})

if (UNIX AND NOT APPLE)
    set (THREADS_PREFER_PTHREAD_FLAG ON)
    find_package (Threads REQUIRED)

    file (GLOB SRC_FILES "src/*.c")
    foreach (SRC_FILE ${SRC_FILES})
        get_filename_component (SRC_FILE_NAME ${SRC_FILE} NAME_WE)
        add_executable ("${PROJECT_NAME}_${SRC_FILE_NAME}" "${SRC_FILE}")
        target_link_libraries ("${PROJECT_NAME}_${SRC_FILE_NAME}" PUBLIC Threads::Threads)
    endforeach ()
else ()
    message (WARNING "Only for Linux")
    add_custom_target ("Not_for_Windows" COMMENT "Only for Linux")
endif (UNIX AND NOT APPLE)
